--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 logging.level.jdbc=OFF
 logging.level.jdbc.sqltiming=DEBUG
 logging.level.jdbc.resultsettable=DEBUG
-spring.kafka.bootstrap-servers=my-app-cp-kafka:9092
+spring.kafka.bootstrap-servers=service-cp-kafka:9092
 spring.kafka.consumer.group-id=testGroup02
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.auto-commit-interval=100
@@ -14,17 +14,29 @@ server.port = 8080
 
 spring.datasource.platform=postgresql
 
-spring.datasource.url=jdbc:postgresql://my-app1-helm-postgresql-master:5432/my-app
+spring.datasource.url=jdbc:postgresql://service-helm-postgresql-master:5432/my-app
 spring.datasource.username=postgres
 spring.datasource.password=Veka37p12
 
-inputtopic=topic2
+
+usertopic=topic2
+staticstopic=topic3
+
 spring.datasource.schema=classpath*:database/schema-postgresql.sql
 
 management.endpoint.health.group.liveness.include=livenessProbe
 management.endpoint.health.group.readiness.include=readinessProbe
 
-
+management.endpoints.web.exposure.include=*
+management.endpoint.restart.enabled=true
+spring.application.name=my-app3
+spring.cloud.kubernetes.config.name=my-app3
+spring.cloud.kubernetes.config.enabled=true
+spring.cloud.kubernetes.config.namespace=default
+spring.cloud.kubernetes.reload.enabled=true
+spring.cloud.kubernetes.reload.monitoring-config-maps=true
+spring.cloud.kubernetes.reload.mode=event
+spring.cloud.kubernetes.reload.strategy=restart_context
 
 
 
