--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 logging.level.jdbc=OFF
 logging.level.jdbc.sqltiming=DEBUG
 logging.level.jdbc.resultsettable=DEBUG
+#kafka
 spring.kafka.bootstrap-servers=service-cp-kafka:9092
 spring.kafka.consumer.group-id=testGroup02
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -11,22 +12,20 @@ spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.producer.acks=all
 spring.kafka.listener.poll-timeout=1000
 server.port = 8080
+topics.usertopic="topic2"
+topics.staticstopic="topic3"
 
+#postgresql
 spring.datasource.platform=postgresql
-
 spring.datasource.url=jdbc:postgresql://service-helm-postgresql-master:5432/my-app
 spring.datasource.username=postgres
 spring.datasource.password=Veka37p12
+#spring.datasource.schema=classpath*:database/schema-postgresql.sql
 
+#management.endpoint.health.group.liveness.include=livenessProbe
+#management.endpoint.health.group.readiness.include=readinessProbe
 
-usertopic=topic2
-staticstopic=topic3
-
-spring.datasource.schema=classpath*:database/schema-postgresql.sql
-
-management.endpoint.health.group.liveness.include=livenessProbe
-management.endpoint.health.group.readiness.include=readinessProbe
-
+#configmap
 management.endpoints.web.exposure.include=*
 management.endpoint.restart.enabled=true
 spring.application.name=my-app3
